<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeerTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_beers">Beer List</string>
    <string name="add_beer">Add Beer</string>
    <string name="title_activity_add_beer">AddBeerActivity</string>
    <string name="btn_ok_text">OK</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="hint_description">description</string>
    <string name="hint_beer_name">beer name</string>
    <string name="hint_pub_name">where am I?</string>
    <string name="title_activity_beer_list">BeerListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_another">Add Another</string>

</resources>
