<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.cozz.danco.finalproject.AddBeerActivity">

    <!--<RatingBar-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/ratingBar"-->
        <!--android:layout_below="@+id/imageView"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="53dp" />-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/beer_to_add"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_marginStart="126dp"
            android:id="@+id/edit_txt_beer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/hint_beer_name"
            android:layout_alignEnd="@id/beer_to_add"
            android:singleLine="true"
            android:imeOptions="actionNext"
             />

        <EditText
            android:id="@+id/edit_txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/hint_description"
            android:layout_below="@id/edit_txt_beer_name"
            android:singleLine="true"
            android:imeOptions="actionNext"
             />

        <EditText
            android:id="@+id/edit_txt_pub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="@string/hint_pub_name"
            android:layout_below="@id/edit_txt_description"
            android:singleLine="true"
            android:imeOptions="actionDone"
             />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok_text"
        android:id="@+id/btnOk"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_text"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
